# fleet

./: .dockerignore  .gitignore  Cargo.toml  DEVLOG.md  LITEPAPER.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml  release-fleet.yml  release.yml
crates/hedgedjlp-daemon/: Cargo.toml
crates/hedgedjlp-daemon/src/: approval.rs  auto_mode.rs  caps.rs  delta.rs  dispatch.rs  hedge.rs  jlp_hedge.rs  ledger.rs  legs.rs  lib.rs  main.rs  prices.rs  rebalance.rs  recover.rs  resize.rs  telemetry.rs  unwind.rs  whitelist.rs
crates/hedgedjlp-daemon/tests/: delta_test.rs
crates/multiply-daemon/: Cargo.toml
crates/multiply-daemon/examples/: sim_seed.rs
crates/multiply-daemon/src/: approval.rs  auto_mode.rs  caps.rs  dispatch.rs  journal.rs  kamino.rs  leverage.rs  liq_monitor.rs  main.rs  pnl.rs  reporter.rs  seed.rs  unwind.rs
crates/multiply-daemon/tests/: unwind_roundtrip.rs
crates/orchestrator-daemon/: Cargo.toml
crates/orchestrator-daemon/src/: cooldown.rs  emit.rs  lib.rs  main.rs  telemetry.rs  tick.rs
crates/researcher-daemon/: Cargo.toml
crates/researcher-daemon/src/: dedup.rs  jobs.rs  lib.rs  main.rs  signal.rs  telemetry.rs  thresholds.rs
crates/researcher-daemon/src/watchers/: jlp_yield.rs  lending_rate.rs  mod.rs  perp_funding.rs  price.rs  stable_peg.rs  token_activity.rs
crates/researcher-daemon/tests/: end_to_end_test.rs
crates/riskwatcher-daemon/: Cargo.toml
crates/riskwatcher-daemon/src/: alerts.rs  escalate.rs  jupiter_perps_poller.rs  lib.rs  main.rs  observer.rs  poller.rs  state.rs  streams.rs  telemetry.rs  thresholds.rs
crates/riskwatcher-daemon/tests/: state_test.rs  thresholds_test.rs
crates/speculator-daemon/: Cargo.toml
crates/speculator-daemon/src/: exec.rs  main.rs
crates/stable-yield-daemon/: Cargo.toml
crates/stable-yield-daemon/src/: approval.rs  auto_mode.rs  caps.rs  dispatch.rs  kamino.rs  lend.rs  lib.rs  main.rs  rates.rs  telemetry.rs
crates/stablefloor-daemon/: Cargo.toml
crates/stablefloor-daemon/src/: main.rs  sanctum.rs
crates/zerox1-defi-cli/: Cargo.toml
crates/zerox1-defi-cli/src/: main.rs
crates/zerox1-defi-daemon/: Cargo.toml
crates/zerox1-defi-daemon/src/: adrena_loader.rs  config.rs  jito_loader.rs  jlp_loader.rs  kamino_loader.rs  main.rs  pairing.rs  persistence.rs  rpc.rs  server.rs  wallet.rs
crates/zerox1-defi-daemon/src/handlers/: adrena.rs  fleet.rs  jito.rs  jlp.rs  jupiter.rs  kamino.rs  mod.rs  multiply.rs  positions.rs  pyth.rs  sanctum.rs
crates/zerox1-defi-protocols/: Cargo.toml
crates/zerox1-defi-protocols/src/: constants.rs  error.rs  lib.rs  util.rs
crates/zerox1-defi-protocols/src/protocols/: adrena.rs  jito.rs  jito_loader.rs  jlp.rs  jupiter.rs  kamino.rs  kamino_loader.rs  mod.rs  pyth.rs  sanctum.rs
crates/zerox1-defi-protocols/src/protocols/fixtures/: jlp_custody_btc.b64  jlp_custody_eth.b64  jlp_custody_sol.b64  jlp_custody_usdc.b64  jlp_custody_usdt.b64
crates/zerox1-defi-runtime/: Cargo.toml
crates/zerox1-defi-runtime/src/: fleet_rates.rs  health.rs  identity.rs  lib.rs  mesh.rs  pairing.rs  persistence.rs  replay.rs  role_registry.rs  rpc.rs  secrets.rs
crates/zerox1-defi-wallet/: Cargo.toml
crates/zerox1-defi-wallet/src/: lib.rs
deploy/: Dockerfile  Dockerfile.dockerignore  Dockerfile.frontend  Dockerfile.init  README-oracle.md  README.md  docker-compose.fleet.yml  init-secrets.sh  install-hedgents.sh  paper-trade-loop.sh
deploy/role-keys/: .gitignore  generate.sh
deploy/systemd/: hedgents-dashboard.service  hedgents-hedgedjlp-live.service  hedgents-hedgedjlp.service  hedgents-live.target  hedgents-multiply-live.service  hedgents-multiply.service  hedgents-orchestrator.service  hedgents-paper-trade.service  hedgents-researcher.service  hedgents-riskwatcher.service  hedgents-stable-yield-live.service  hedgents-stable-yield.service  hedgents-watchdog.service  hedgents-watchdog.timer  hedgents.target
docs/: emergency-withdraw-implementation-plan.md  hedgedjlp-daemon-audit-2026-05-15.md  jupiter-perps-bundle-spec.md  jupiter-perps-position-spec.md  kamino-klend-bundle-spec.md  kamino-loader-audit-2026-05-14.md  multiply-unwind-implementation-plan.md  orchestrator-execute-implementation-plan.md  regime-aware-allocator.md
docs/runbooks/: hedgedjlp-mainnet-tiny.md  multiply-devnet.md  multiply-mainnet-tiny.md  orchestrator-bringup.md  orchestrator-devnet-smoke.md  orchestrator-mainnet.md  researcher-devnet.md  riskwatcher-devnet.md  riskwatcher-mainnet.md  stable-yield-approval-verified.md  stable-yield-mainnet-tiny.md  stable-yield-withdraw.md
docs/superpowers/plans/: 2026-05-04-fleet-fungibility.md  2026-05-04-fleet-six-daemons.md  2026-05-05-multiply-strategy.md  2026-05-06-demo-sprint.md  2026-05-06-hedgedjlp-daemon.md  2026-05-06-researcher-daemon.md  2026-05-06-riskwatcher-daemon.md  2026-05-06-speculator-daemon.md  2026-05-06-stable-yield-daemon.md
scripts/: install.sh  mainnet-demo-stable-yield.sh  run-fleet-with-dashboard.sh
tools/fleet-dashboard-server/: Cargo.toml
tools/fleet-dashboard-server/src/: lib.rs  main.rs  types.rs
tools/fleet-dashboard-server/src/api/: events.rs  mod.rs  state.rs  tts.rs
tools/fleet-dashboard-server/src/chain/: balance.rs  jlp_price.rs  jupiter_perps.rs  kamino.rs  mod.rs  rates.rs
tools/fleet-dashboard-server/src/ingest/: apr_sampler.rs  aum_sampler.rs  envelope_decoder.rs  log_tailer.rs  mod.rs  pnl_jsonl.rs
tools/fleet-dashboard-server/src/store/: mod.rs  sqlite.rs
tools/fleet-dashboard-server/tests/: api_test.rs  decoder_tx_signature_test.rs  integration_test.rs  smoke_test.rs  store_test.rs
tools/fleet-pm-stub/: Cargo.toml
tools/fleet-pm-stub/src/: allocator.rs  allocator_apr_weighted.rs  allocator_runner.rs  allocator_targets.rs  lib.rs  main.rs
