[workspace]
resolver = "2"
members = [
    "crates/zerox1-defi-protocols",
    "crates/zerox1-defi-daemon",
    "crates/zerox1-defi-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chumyin/zerox1"

[workspace.dependencies]
solana-sdk = "2.0"
solana-rpc-client = "2.0"
solana-rpc-client-api = "2.0"
spl-token = "6.0"
spl-associated-token-account = "5.0"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
borsh = { version = "1.5", features = ["derive"] }
bs58 = "0.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
bincode = "1.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
