[package]
name = "hedgedjlp-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hedgedjlp-daemon"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
zerox1-defi-runtime = { path = "../zerox1-defi-runtime" }
zerox1-defi-protocols = { path = "../zerox1-defi-protocols" }
# HedgedJLP signs Jupiter Perps instructions, so the wallet crate is required.
zerox1-defi-wallet    = { path = "../zerox1-defi-wallet" }
zerox1-protocol.workspace = true
zerox1-node-enterprise.workspace = true
ed25519-dalek = "2"
libp2p = "0.54.1"
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
ciborium = "0.2"
solana-sdk.workspace = true
spl-associated-token-account = { workspace = true }
