[package]
name = "multiply-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "multiply-daemon"
path = "src/main.rs"

[dependencies]
zerox1-defi-runtime = { path = "../zerox1-defi-runtime" }
zerox1-defi-protocols = { path = "../zerox1-defi-protocols" }
# Multiply signs Kamino instructions, so the wallet crate is required.
zerox1-defi-wallet    = { path = "../zerox1-defi-wallet" }
zerox1-protocol.workspace = true
zerox1-node-enterprise.workspace = true
ed25519-dalek = "2"
libp2p = "0.54.1"
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
# axum still required by kamino.rs handler scaffolding (lifted from the
# monolith — uses State<AppState>/IntoResponse/Json). The daemon itself
# no longer serves HTTP; mesh I/O is via signed envelopes on libp2p.
axum.workspace = true
hex.workspace = true
rusqlite.workspace = true
solana-sdk.workspace = true
spl-token.workspace = true
ciborium = "0.2"
