[package]
name = "orchestrator-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "orchestrator_daemon"

[[bin]]
name = "orchestrator-daemon"
path = "src/main.rs"

[dependencies]
# Reuse the pure allocator decision function + snapshot-fetch glue from
# the existing CLI tool. Phase 1 keeps these as a library boundary so the
# CLI and the daemon make the *same* decision from the *same* code path.
fleet-pm-stub = { path = "../../tools/fleet-pm-stub" }

zerox1-defi-runtime = { path = "../zerox1-defi-runtime" }
# Wallet crate is intentionally NOT in this dep graph. Phase 1 = dry-run
# observe-only. Authority to emit Assign/Withdraw envelopes lands in v0.4.0
# and will route through the same approval queue the operator CLI uses —
# the daemon itself never holds a wallet key.
zerox1-protocol.workspace = true
zerox1-node-enterprise.workspace = true

ed25519-dalek = "2"
libp2p = "0.54.1"
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
