[package]
name = "riskwatcher-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "riskwatcher_daemon"

[[bin]]
name = "riskwatcher-daemon"
path = "src/main.rs"

[dependencies]
zerox1-defi-runtime = { path = "../zerox1-defi-runtime" }
zerox1-defi-protocols = { path = "../zerox1-defi-protocols" }
# DO NOT add zerox1-defi-wallet — riskwatcher must not be able to sign.
zerox1-protocol.workspace = true
zerox1-node-enterprise.workspace = true
solana-sdk.workspace = true
ed25519-dalek = "2"
libp2p = "0.54.1"
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
# axum is required by the M9 metrics endpoint in main.rs
# (`run_metrics_endpoint` — `GET /metrics` Prometheus text on 127.0.0.1:9091).
axum.workspace = true
hex.workspace = true
ciborium = "0.2"
