[package]
name = "speculator-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "speculator-daemon"
path = "src/main.rs"

[dependencies]
zerox1-defi-runtime = { path = "../zerox1-defi-runtime" }
zerox1-defi-protocols = { path = "../zerox1-defi-protocols" }
zerox1-defi-wallet    = { path = "../zerox1-defi-wallet" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
solana-sdk.workspace = true
