[package]
name = "zerox1-defi-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust Solana DeFi protocol instruction builders for Kamino, Jupiter JLP, Adrena, Sanctum INF, Pyth."

[dependencies]
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
anyhow = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
sha2 = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
