[package]
name = "fleet-dashboard-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fleet_dashboard_server"
path = "src/lib.rs"

[[bin]]
name = "fleet-dashboard-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
axum = { workspace = true, features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = { workspace = true }
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
zerox1-defi-protocols = { path = "../../crates/zerox1-defi-protocols" }
bs58 = { workspace = true }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
